--- a/index.html
+++ b/index.html
@@ -8,20 +8,26 @@
 <!--[if gt IE 8]><!-->
 <html class="no-js"> <!--<![endif]-->
 <head>
-    <title>TOPUP engine</title>
+    <title>TOPUP engine</title> 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="description" content="top up engine">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="js/jquery.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+   
 </head>
 <body ng-app="TopupWebApp">
 <div class="header" ng-include='"templates/header.html"'></div>
 <div ng-include='"templates/nav.html"'></div>
 <div ng-view></div>
+
 <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.18/angular.min.js"></script>
 <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.18/angular-route.min.js"></script>
+
 <script src="js/main.js"></script>
+
 </body>
 </html>
