--- a/recharge.html
+++ b/recharge.html
@@ -116,6 +116,7 @@
     <div class="overlay" id="error-overlay">
         <br/><br/>
         <h1>Transaction Failed</h1>
+        <h4 id="message"></h4>
         <p id="retry_btn">RETRY</p>
         </div>
     </div>
