--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
     <div id="my-signin2" class="button"></div>
     </div>
     <script src="./js/signin.js"></script>
+    <script src="./js/config.js"></script>
     <script src="https://apis.google.com/js/platform.js?onload=renderButton" async defer></script>
     <script src="https://apis.google.com/js/platform.js" async defer></script>
 </body>
